# workflowhub-graph

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  Snakefile  docker-compose.yml  env.template  merged.ttl  pyproject.toml
.github/workflows/: aggregate.yaml  lint-and-test.yaml  lint.yaml  push-docker.yaml
SPARQL/: README.md  query-rocrate-sparql.py  requirements.txt
SPARQL/queries/: 01_is_rocrate.sparql  02_obtain_workflow_pid.sparql
SPARQL/queries/from_execution/: 03_get_containers_from_first_execution.sparql  04_get_inputs_from_first_execution.sparql  05_get_environment_from_first_execution.sparql  06_get_outputs_from_first_execution.sparql
SPARQL/queries/from_workflow/: 03_get_containers_declared_in_workflow.sparql  04_get_inputs_declared_in_workflow.sparql  05_get_environment_declared_in_workflow.sparql  06_get_outputs_declared_in_workflow.sparql
graph/: app.js  index.html  package-lock.json  package.json
src/: constants.py  merge.py  source_crates.py
tests/: test_absolutize.py  test_source_crates.py  test_source_creates.py
tests/test_data/: 31_ro-crate-metadata.json  41_ro-crate-metadata.json  552_ro-crate-metadata.json  883_ro-crate-metadata.json
upload-crate/: Dockerfile  requirements.txt
upload-crate/app/: main.py  test_api.py
workflowhub_graph/: absolutize.py  cached_url_open.py  cachedurlopen.py  check_outputs.py  constants.py  help.py  merge.py  source_crates.py  upload.py
